# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: Linter_and_Test.yml
page_loader/: __init__.py  cli.py  download.py  fs.py  html.py  logger.py
page_loader/scripts/: loader.py  main.py
tests/: conftest.py  test_page_download.py
tests/fixtures/: expected.html  very_long_and_complicated_site_name.html
